RESOLVED FIXED43186
[IndexedDB] WebDOMStringList ctor is not exported and causes link errors for the multi-dll chromium build
https://bugs.webkit.org/show_bug.cgi?id=43186
Summary [IndexedDB] WebDOMStringList ctor is not exported and causes link errors for ...
Andrei Popescu
Reported 2010-07-29 04:51:32 PDT
[IndexedDB] WebDOMStringList ctor is not exported and causes link errors for the multi-dll chromium build
Attachments
Patch (1.24 KB, patch)
2010-07-29 04:56 PDT, Andrei Popescu
jorlow: review+
Andrei Popescu
Comment 1 2010-07-29 04:56:35 PDT
Jeremy Orlow
Comment 2 2010-07-29 04:58:05 PDT
Comment on attachment 62939 [details] Patch Remove the [IndexedDB] from the bug and the CL. r=me
Andrei Popescu
Comment 3 2010-07-29 05:00:41 PDT
Note You need to log in before you can comment on or make changes to this bug.