2010-07-29  Andrei Popescu  <andreip@google.com>

Reviewed by Jeremy Orlow.

        [IndexedDB] WebDOMStringList ctor is not exported and causes link errors for the multi-dll chromium build
        https://bugs.webkit.org/show_bug.cgi?id=43186

        Add WEBKIT_API to WebDOMStringList default ctor.

        * public/WebDOMStringList.h:

Canonical link: https://commits.webkit.org/55094@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64271 268f45cc-cd09-0410-ab3c-d52691b4dbfc